# charlotte-core

./: .gdbinit  .gitignore  .gitmodules  CONTRIBUTOR_LICENSE_AGREEMENT.md  LICENSE  Makefile  README.md  codecheck.py  limine.cfg  limine.conf  loc.sh
cbof/: Cargo.toml  build.rs
cbof/linker/: riscv64.ld  x86_64.ld
cbof/src/: main.rs
cbof/src/acpi/: bgrt.rs  fadt.rs  madt.rs  sdt.rs  srat.rs
cbof/src/common/: mod.rs
cbof/src/common/c_abi/: mod.rs
cbof/src/cpu_control/: mod.rs
cbof/src/cpu_control/isa/: aarch64.rs  mod.rs  riscv64.rs  x86_64.rs
cbof/src/framebuffer/: chars.rs  console.rs  framebuffer.rs
cbof/src/graphics/framebuffer/: console.rs  framebuffer.rs
cbof/src/init/isa/: mod.rs
cbof/src/interrupts/: mod.rs
cbof/src/interrupts/x86_64/: consts.rs  mod.rs
cbof/src/logging/: mod.rs
cbof/src/memory/paging/page_map/: mod.rs
cbof/src/uart/: mod.rs
cbof/src/uart/isa/: aarch64.rs  mod.rs  riscv64.rs  x86_64.rs
charlotte_core/: Cargo.toml  build.rs  rust-toolchain.toml
charlotte_core/.cargo/: config.toml
charlotte_core/linker/: aarch64.ld  x86_64.ld
charlotte_core/src/: kmon.rs  main.rs
charlotte_core/src/access_control/: mod.rs
charlotte_core/src/acpi/: bgrt.rs  fadt.rs  madt.rs  mod.rs  rsdp.rs  sdt.rs  srat.rs  tables.rs
charlotte_core/src/allocator/: mod.rs
charlotte_core/src/arch/: mod.rs  ringbuffer.rs
charlotte_core/src/arch/aarch64/: mod.rs  uart.rs
charlotte_core/src/arch/aarch64/memory/: mod.rs
charlotte_core/src/arch/riscv64/: primitives.asm
charlotte_core/src/arch/x86_64/: gdt_tss.rs  global.asm  global.rs  mod.rs  serial.rs  x86_64.asm
charlotte_core/src/arch/x86_64/cpu/: cpu.asm  cpu.rs  cpu_intrinsics.rs  mod.rs
charlotte_core/src/arch/x86_64/exceptions/: exceptions.asm  exceptions.rs  mod.rs
charlotte_core/src/arch/x86_64/gdt/: gdt.asm  gdt.rs  mod.rs  tss.rs
charlotte_core/src/arch/x86_64/idt/: idt.asm  idt.rs  mod.rs
charlotte_core/src/arch/x86_64/interrupts/: apic.rs  apic_consts.rs  isa_handler.asm  isa_handler.rs  lapic.rs  mod.rs  vectors.asm  vectors.rs  vectors_asm.py
charlotte_core/src/bootinfo/: mod.rs
charlotte_core/src/common/: mod.rs
charlotte_core/src/common/isa/: mod.rs
charlotte_core/src/cpu_control/isa/: mod.rs  x86_64.rs
charlotte_core/src/drivers/: keyboard.rs
charlotte_core/src/framebuffer/: chars.rs  colors.rs  console.rs  framebuffer.rs  mod.rs
charlotte_core/src/graphics/: mod.rs
charlotte_core/src/init/: mod.rs
charlotte_core/src/init/isa/: mod.rs
charlotte_core/src/interrupts/: mod.rs
charlotte_core/src/interrupts/isa/: mod.rs
charlotte_core/src/libk/: mod.rs  ringbuffer.rs
charlotte_core/src/limine/: mod.rs
charlotte_core/src/logger/: logger.rs  mod.rs
charlotte_core/src/logging/: logger.rs
charlotte_core/src/memory/: address.rs  mod.rs  pmm.rs  span_printer.rs
charlotte_core/src/memory/allocator/: mod.rs  page_level.rs
charlotte_core/src/memory/vmm/: mod.rs
charlotte_core/src/physical_memory/: mod.rs  physical_address.rs
charlotte_core/src/segmentation/: mod.rs
charlotte_core/src/tests/: mod.rs
charlotte_core/src/tests/test_macros/: Cargo.toml
charlotte_core/src/uart/: mod.rs
charlotte_core/src/uart/isa/: mod.rs
charlotte_core/src/virtual_memory/: mod.rs  virtual_address.rs
charlotte_core/src/virtual_memory/isa/: mod.rs
(+58 files in other folders)
