[package]
name = "cbof"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "cbof"
test = false
bench = false

[build-dependencies]
cc = "*"
walkdir = "*"

[dependencies]
cfg-if = ">=0.1.10"
derive-getters = ">=0.5.0"
ignore-result = ">=0.2.0"
limine = ">=0.3.0"
spin = { version = ">=0.9.8", features = ["ticket_mutex"] }

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64 = "*"

[target.'cfg(target_arch = "aarch64")'.dependencies]
aarch64-cpu = "*"

[profile.release]
panic = "abort"
[profile.dev]
panic = "abort"

# Linting
[lints.clippy]
# Groups
suspicious = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
complexity = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }

undocumented_unsafe_blocks = { level = "warn" }

# Relax some lints because we don't support 32-bit targets
enum_clike_unportable_variant = { level = "allow", priority = -10 }
