[package]
name = "charlotte_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "charlotte_core"
bench = false

[build-dependencies]
cc = "*"
walkdir = "*"

[dependencies]
derive-getters = "0.3.0"
ignore-result = "*"
limine = "0.2.0"
spin = {version = "*", features = ["ticket_mutex"]}

[dev-dependencies]
test_macros = {path = "src/tests/test_macros"}

[target.'cfg(target_arch = "aarch64")'.dependencies]
aarch64-cpu = "9.4.0"
