[package]
name = "charlotte_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "charlotte_core"
test = false
bench = false

[build-dependencies]
cc = "*"
walkdir = "*"

[dependencies]
derive-getters = "0.3.0"
ignore-result = "*"
limine = "0.2.0"
spin = {version = "*", features = ["ticket_mutex"]}

[target.'cfg(target_arch = "aarch64")'.dependencies]
aarch64-cpu = "9.4.0"

# Linting
[lints.clippy]
# Groups
suspicious = { level = "deny", priority = -1 }
perf = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
