[package]
name = "charlotte_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "charlotte_core"
test = false
bench = false

[build-dependencies]
cc = "*"
walkdir = "*"

[dependencies]
derive-getters = "0.4.0"
ignore-result = "*"
limine = "0.2.0"
spin = { version = "*", features = ["ticket_mutex"] }

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64 = "0.15.1"

[target.'cfg(target_arch = "aarch64")'.dependencies]
aarch64-cpu = "9.4.0"

# Linting
[lints.clippy]
# Groups
suspicious = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
complexity = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
# Relax some lints because we don't support 32-bit targets
enum_clike_unportable_variant = {level = "allow", priority = -10}